Update to use static validation message holders.

--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -179,6 +179,7 @@
                           placeholder="Your Name"
                           autocomplete="name"
                           autocorrect="off">
+                        <small class="help-block validMessage text-success message-hidden"></small>
                       </div>
                       <input
                         type="hidden"
@@ -201,6 +202,7 @@
                           autocomplete="email"
                           autocapitalize="off"
                           autocorrect="off">
+                        <small class="help-block validMessage text-success message-hidden"></small>
                         <span class="email-suggestion"></span>
                       </div>
                     </div>
@@ -215,6 +217,7 @@
                           placeholder="888-888-8888"
                           autocomplete="tel"
                           autocorrect="off">
+                        <small class="help-block validMessage text-success message-hidden"></small>
                       </div>
                     </div>
                     <div class="col-xs-12">
@@ -249,6 +252,7 @@
                             autocorrect="off"
                             inputmode="numeric"
                             onkeyup="loadStateFromZip()">
+                          <small class="help-block validMessage text-success message-hidden"></small>
                         </div>
                       </div>
                       <div class="col-sm-5 col-xs-5 state-col">
@@ -320,6 +324,7 @@
                             <option value="WI">WI</option>
                             <option value="WY">WY</option>
                           </select>
+                          <small class="help-block validMessage text-success message-hidden"></small>
                         </div>
                       </div>
                     </div>
@@ -333,6 +338,7 @@
                         placeholder="Your City"
                         autocomplete="on"
                         autocorrect="off"/>
+                      <small class="help-block validMessage text-success message-hidden"></small>
                     </div>
                     <div class="form-group">
                       <label for="address">Address *:</label>
@@ -344,6 +350,7 @@
                         placeholder="2125 Chestnut St."
                         autocomplete="address-line1"
                         autocorrect="off"/>
+                      <small class="help-block validMessage text-success message-hidden"></small>
                     </div>
                   </div>
                 </div>
@@ -385,6 +392,7 @@
                             placeholder="•••• •••• •••• ••••"
                             autocorrect="off"
                             autocomplete="cc-csc">
+                          <small class="help-block validMessage text-success message-hidden"></small>
                         </div>
                         <label for="month">Expiration *
                           <small>(MM/YY)</small>
@@ -411,6 +419,7 @@
                                 <option value="11">11</option>
                                 <option value="12">12</option>
                               </select>
+                              <small class="help-block validMessage text-success message-hidden"></small>
                             </div>
                           </div>
                           <div class="col-xs-4 exp-year">
@@ -437,6 +446,7 @@
                                 <option value="29">29</option>
                                 <option value="30">30</option>
                               </select>
+                              <small class="help-block validMessage text-success message-hidden"></small>
                             </div>
                           </div>
                           <div class="col-xs-4 img-secure">
@@ -444,6 +454,7 @@
                           </div>
                         </div>
                         <input type="hidden" name="cardSecurityCode" class="form-control" id="cardCSC" value="100">
+                        <small class="help-block validMessage text-success message-hidden"></small>
                       </div>
                     </div>
                   </div>
