--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -263,6 +263,7 @@
                   placeholder="Your Name"
                   autocomplete="name"
                   autocorrect="off">
+                <small class="help-block validMessage text-success message-hidden"></small>
                 <span class="icon-field ss-user"></span>
               </div>
 
@@ -277,6 +278,7 @@
                   placeholder="email@example.com"
                   autocapitalize="off"
                   autocorrect="off">
+                <small class="help-block validMessage text-success message-hidden"></small>
                 <div>
                   <span id="suggestedEmail"></span>
                 </div>
@@ -293,6 +295,7 @@
                   placeholder="888-888-8888"
                   autocomplete="tel"
                   autocorrect="off">
+                <small class="help-block validMessage text-success message-hidden"></small>
                 <span class="icon-field ss-phone"></span>
               </div>
 
@@ -355,6 +358,7 @@
                       autocomplete="postal-code"
                       inputmode="numeric"
                       onkeyup="loadStateFromZip()">
+                    <small class="help-block validMessage text-success message-hidden"></small>
                   </div>
                 </div>
 
@@ -427,6 +431,7 @@
                       <option value="WI">WI</option>
                       <option value="WY">WY</option>
                     </select>
+                    <small class="help-block validMessage text-success message-hidden"></small>
                   </div>
                 </div>
               </div>
@@ -441,6 +446,7 @@
                   placeholder="Your City"
                   autocomplete="on"
                   autocorrect="off"/>
+                <small class="help-block validMessage text-success message-hidden"></small>
               </div>
 
               <div class="form-group clearfix">
@@ -453,6 +459,7 @@
                   placeholder="Your Address"
                   autocomplete="address-line1"
                   autocorrect="off"/>
+                <small class="help-block validMessage text-success message-hidden"></small>
               </div>
 
               <button type="submit" class="btn btn-danger btn-lg btn-block btn-modal-confirm">
