--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/ss-icon.css">
-    <link rel="stylesheet" href="assets/css/checkout.css">
+    <link rel="stylesheet" href="assets/css/pages/checkout.css">
     <script type="text/javascript">
       !function () {
         var analytics = window.analytics = window.analytics || [];
