--- a/frontend/html/us_batteryoffer.html
+++ b/frontend/html/us_batteryoffer.html
@@ -24,7 +24,7 @@
     <link rel="stylesheet" href="assets/css/modal.css">
     <link rel="stylesheet" href="assets/css/responsive.css">
     <link rel="stylesheet" href="assets/css/ss-icon.css">
-    <link rel="stylesheet" href="assets/css/battery.css">
+    <link rel="stylesheet" href="assets/css/pages/battery.css">
 
     <script type="text/javascript">
       !function () {
