--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -20,12 +20,7 @@
       rel="stylesheet"
       href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900|Open+Sans:400,600,700,700i,800|Oswald:200,300,400,500,600,700|Roboto:700">
       <link rel="stylesheet" href="assets/css/loading-bar.css">
-    <link rel="stylesheet" href="assets/css/main.css">
-    <link rel="stylesheet" href="assets/css/modal.css">
-    <link rel="stylesheet" href="assets/css/responsive.css">
-    <link rel="stylesheet" href="assets/css/ss-icon.css">
-    <link rel="stylesheet" href="assets/css/pages/receipt.css">
-
+    <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript">
       !function () {
         var analytics = window.analytics = window.analytics || [];
