--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -89,9 +89,9 @@
             Thank you for grabbing your
             <span>Tactical mastery flashlight(s)</span>
           </p>
-          <p class="accentBox">View Your Product Reciept Below</p>
+          <p class="accent-box">View Your Product Reciept Below</p>
 
-          <p class="title orderId">Your Order Number:</p>
+          <p class="title order-id">Your Order Number:</p>
           <span class="thanksfield" id="orderNumber"></span>
 
           <p class="note">
