Update missing script & styles

--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -105,7 +105,7 @@
             address. If you don’t see it, make sure to also check your spam folder.</p>
           <p class="note">Your purchase will appear on your bank statement with name:
             <strong>
-              <span id="ccIdentity"><br></span>
+              <span id="ccIdentity" class="ccIdentity"><br></span>
             </strong>
           </p>
 
