--- a/frontend/html/us_headlampoffer.html
+++ b/frontend/html/us_headlampoffer.html
@@ -135,6 +135,6 @@
       src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4"></script>
 
     <script type="text/javascript" src="assets/js/libs.js"></script>
-    <script type="text/javascript" src="assets/js/app.js"></script>
+    <script type="text/javascript" src="assets/js/battery_headlamp_script.js"></script>
   </body>
 </html>
