Load google fonts via WebFont.load

--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -120,6 +120,13 @@
       src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4"></script>
     <script type="text/javascript" src="assets/js/libs.js"></script>
     <script type="text/javascript" src="assets/js/upsell_receipt_script.js"></script>
-
+    <script           src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Lato:300,400,700,900', 'Open+Sans:400,600,700,700i,800']
+        }
+      });
+    </script>
   </body>
 </html>
