--- a/frontend/html/partner.html
+++ b/frontend/html/partner.html
@@ -86,5 +86,13 @@
         </div>
       </div>
     </div>
+    <script           src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Lato:300,400,700,900', 'Open+Sans:400,600,700,700i,800']
+        }
+      });
+    </script>
   </body>
 </html>
