--- a/frontend/html/tm3.html
+++ b/frontend/html/tm3.html
@@ -317,5 +317,13 @@
         </div>
       </div>
     </div>
+    <script           src="https://ajax.googleapis.com/ajax/libs/webfont/1.5.18/webfont.js"></script>
+    <script>
+      WebFont.load({
+        google: {
+          families: ['Lato:300,400,700,900', 'Open+Sans:400,600,700,700i,800', 'Oswald:200,300,400,500,600,700']
+        }
+      });
+    </script>
   </body>
 </html>
