--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -13,9 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tactical Mastery Flashlights - Video page">
     <link rel="icon" href="favicon.ico">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
     <link rel="stylesheet" href="assets/css/style.css">
     <script type="text/javascript">
       !function () {
@@ -87,15 +85,53 @@
           </p>
           <p class="accent-box">View Your Product Reciept Below</p>
 
-          <p class="title order-id">Your Order Number:</p>
-          <span class="thanksfield" id="orderNumber"></span>
+          <div class="order-detail">
+          <p class="title order-id ">Your Order Number:</p>
+          <span class="thanksfield " id="orderNumber"></span>
+          </div>
+          <table class="table item-detail-table">
+            <thead>
+              <tr>
+                <th>#</th>
+                <th>Product</th>
+                <th>Quantity</th>
+                <th>Amount</th>
 
-          <p class="note">
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th scope="row">1</th>
+                <td>Tactical Mastery Flashlight - 5 ($145)</td>
+                <td>1</td>
+                <td>$10</td>
+              </tr>
+              <tr>
+                <th scope="row">2</th>
+                <td>Rechargeable Battery + 3 Yr Warranty - 1</td>
+                <td>2</td>
+                <td>$20</td>
+              </tr>
+              <tr>
+                <th scope="row">3</th>
+                <td>Tactical Mastery Headlamp - 1</td>
+                <td>3</td>
+                <td>$50</td>
+              </tr>
+              <tr>
+                <th scope="row"></th>
+                <td></td>
+                <td style="text-align:right;font-size:21px;font-weight:700;">Total Amount</td>
+                <td class="total-amount">$80</td>
+              </tr>
+            </tbody>
+            </table>
+          <p class="note ">
             <strong>Note:</strong>
             Your Tactical Mastery flashlight will be shipped within 3-5 Business Days, you’ll receive shipping
             confirmation with a tracking number via UPS once your shipment leaves our warehouse.
           </p>
-
+          <div class="well">
           <h3>Contact Us</h3>
           <p class="note">We’ve sent you a statement showing your confirmation on the targets to your email
             address. If you don’t see it, make sure to also check your spam folder.</p>
@@ -114,12 +150,12 @@
             <span class="accent">support@tacticalmastery.com.</span>
           </p>
         </div>
+        </div>
       </div>
     </div>
     <script
       src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4"></script>
     <script type="text/javascript" src="assets/js/libs.js"></script>
     <script type="text/javascript" src="assets/js/upsell_receipt_script.js"></script>
-
   </body>
 </html>
