Test definitions for contact modal validation

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -249,7 +249,7 @@
               </button>
             </div>
             <div class="modal-body">
-              <div class="form-group clearfix">
+              <div class="form-group form-group-name clearfix">
                 <label for="contactModalName">Name *:</label>
                 <input
                   type="text"
@@ -263,7 +263,7 @@
                 <span class="icon-field ss-user"></span>
               </div>
 
-              <div class="form-group clearfix">
+              <div class="form-group form-group-email clearfix">
                 <label for="email">Email Address *:</label>
                 <input
                   type="email"
@@ -280,7 +280,7 @@
                 <span class="icon-field ss-mail"></span>
               </div>
 
-              <div class="form-group clearfix">
+              <div class="form-group form-group-phone clearfix">
                 <label for="phonenumber">Phone Number *:</label>
                 <input
                   type="tel"
