labels for binding

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -267,6 +267,7 @@
                 <label for="email">Email Address *:</label>
                 <input
                   type="email"
+                  id="email"
                   class="form-control  scrollFix clearable email"
                   name="email"
                   autocomplete="email"
@@ -360,7 +361,7 @@
                 <div class="col-sm-5 col-xs-5 state-col">
                   <div class="form-group clearfix">
                     <label for="state">State *:</label>
-                    <select class="form-control required state" name="state">
+                    <select class="form-control required state" id="state" name="state">
                       <option disabled="" selected="" value="">--</option>
                       <option value="AL">AL</option>
                       <option value="AK">AK</option>
