--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -192,6 +192,7 @@
                         <label for="email">Email Address *:</label>
                         <input
                           type="email"
+                          id="email"
                           class="form-control clearable required email"
                           name="emailAddress"
                           placeholder="email@example.com"
@@ -253,7 +254,7 @@
                       <div class="col-sm-5 col-xs-5 state-col">
                         <div class="form-group">
                           <label for="state">State *:</label>
-                          <select class="form-control required state" name="state">
+                          <select class="form-control required state" id="state" name="state">
                             <option disabled="" selected="" value="">--</option>
                             <option value="AL">AL</option>
                             <option value="AK">AK</option>
@@ -377,10 +378,11 @@
                           </a>
                         </div>
                         <div class="form-group">
-                          <label for="creditcard">Card Number *</label>
+                          <label for="cardNumber">Card Number *</label>
                           <input
                             class="form-control clearable required numfield creditcard"
                             name="cardNumber"
+                            id="cardNumber"
                             inputmode="numeric"
                             pattern="[0-9]*"
                             placeholder="•••• •••• •••• ••••"
@@ -397,6 +399,7 @@
                               <select
                                 class="form-control custom-select required month"
                                 name="month"
+                                id="month"
                                 autocomplete="cc-exp-month">
                                 <option disabled="" selected="" value="">– –</option>
                                 <option value="01">01</option>
