update frontend for site to work under /tacticalsales/

--- a/frontend/html/us_batteryoffer.html
+++ b/frontend/html/us_batteryoffer.html
@@ -16,7 +16,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="tacticalsales/assets/css/style.css">
     <script type="text/javascript">
       !function () {
         var analytics = window.analytics = window.analytics || [];
@@ -137,8 +137,8 @@
     <script
       src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4"></script>
 
-    <script type="text/javascript" src="assets/js/libs.js"></script>
-    <script type="text/javascript" src="assets/js/battery_headlamp_script.js"></script>
+    <script type="text/javascript" src="tacticalsales/assets/js/libs.js"></script>
+    <script type="text/javascript" src="tacticalsales/assets/js/battery_headlamp_script.js"></script>
 
   </body>
 </html>
