--- a/frontend/html/press.html
+++ b/frontend/html/press.html
@@ -17,7 +17,7 @@
     <link
       rel="stylesheet"
       href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
-    <link rel="stylesheet" href="assets/css/style.css">
+    <link rel="stylesheet" href="tacticalsales/assets/css/style.css">
     <script type="text/javascript">
       !function () {
         var analytics = window.analytics = window.analytics || [];
