--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -471,16 +471,16 @@
         </p>
         <ul>
           <li>
-            <a href="javascript:void(0);" id="privacy" onclick="privacyModal()">Privacy Policy</a>
+            <a href="javascript:void(0);" id="privacy" onclick="utilsInstance.privacyModal()">Privacy Policy</a>
           </li>
           <li>
-            <a href="javascript:void(0);" id="terms" onclick="termsModal()">Terms & Conditions</a>
+            <a href="javascript:void(0);" id="terms" onclick="utilsInstance.termsModal()">Terms & Conditions</a>
           </li>
           <li>
-            <a href="javascript:void(0);" id="partner" onclick="partnerModal()">Partners</a>
+            <a href="javascript:void(0);" id="partner" onclick="utilsInstance.partnerModal()">Partners</a>
           </li>
           <li>
-            <a href="javascript:void(0);" id="custcare" onclick="custcareModal()">Customer Care</a>
+            <a href="javascript:void(0);" id="custcare" onclick="utilsInstance.custcareModal()">Customer Care</a>
           </li>
         </ul>
       </div>
