--- a/frontend/html/tm3.html
+++ b/frontend/html/tm3.html
@@ -272,13 +272,13 @@
           </p>
           <ul class="list-inline">
             <li>
-              <a href="javascript:void(0);" id="privacy" onclick="privacyModal()">Privacy Policy</a>
+              <a href="javascript:void(0);" id="privacy" onclick="utilsInstance.privacyModal()">Privacy Policy</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="terms" onclick="termsModal()">Terms &amp; Conditions</a>
+              <a href="javascript:void(0);" id="terms" onclick="utilsInstance.termsModal()">Terms &amp; Conditions</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="custcare" onclick="custcareModal()">Customer Care</a>
+              <a href="javascript:void(0);" id="custcare" onclick="utilsInstance.custcareModal()">Customer Care</a>
             </li>
           </ul>
         </div>
