--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -207,16 +207,16 @@
           </p>
           <ul>
             <li>
-              <a href="javascript:void(0);" id="privacy" onclick="privacyModal()">Privacy Policy</a>
+              <a href="javascript:void(0);" id="privacy" class="popupButton" data-modalid="privacy">Privacy Policy</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="terms" onclick="termsModal()">Terms & Conditions</a>
+              <a href="javascript:void(0);" id="terms" class="popupButton" data-modalid="terms">Terms & Conditions</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="partner" onclick="partnerModal()">Partners</a>
+              <a href="javascript:void(0);" id="partner" class="popupButton" data-modalid="partner">Partners</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="custcare" onclick="custcareModal()">Customer Care</a>
+              <a href="javascript:void(0);" id="custcare" class="popupButton" data-modalid="customercare">Customer Care</a>
             </li>
           </ul>
         </div>
