Revert "popup fixes"
This reverts commit d8db45cc9457f93de63468428c63bb371df0f4e6.

--- a/frontend/html/tm3.html
+++ b/frontend/html/tm3.html
@@ -69,7 +69,6 @@
             analytics.load("7FMBWsjMCbyWvbx4UuGCovr1SYyokQYd");
             analytics.page();
           }
-          
         }();
     </script>
   </head>
@@ -273,16 +272,13 @@
           </p>
           <ul class="list-inline">
             <li>
-              <a href="javascript:void(0);" id="privacy" class="popupButton" data-modalid="privacy">Privacy Policy</a>
+              <a href="javascript:void(0);" id="privacy" onclick="privacyModal()">Privacy Policy</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="terms" class="popupButton" data-modalid="terms">Terms & Conditions</a>
+              <a href="javascript:void(0);" id="terms" onclick="termsModal()">Terms &amp; Conditions</a>
             </li>
             <li>
-              <a href="javascript:void(0);" id="partner" class="popupButton" data-modalid="partner">Partners</a>
-            </li>
-            <li>
-              <a href="javascript:void(0);" id="custcare" class="popupButton" data-modalid="customercare">Customer Care</a>
+              <a href="javascript:void(0);" id="custcare" onclick="custcareModal()">Customer Care</a>
             </li>
           </ul>
         </div>
