Feature: Async CSS loading

--- a/frontend/html/press.html
+++ b/frontend/html/press.html
@@ -15,9 +15,13 @@
     <meta property="og:title" content="Tactical Mastery Flashlights - Video page">
     <link rel="icon" href="favicon.ico">
     <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
-    <link rel="stylesheet" href="/tacticalsales/assets/css/style.css">
+      rel="preload"
+      href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)"
+      onload="this.rel='stylesheet';"
+      >
+    <link rel="preload" href="/tacticalsales/assets/css/style.css"
+      onload="this.rel='stylesheet';"
+      >
     <script type="text/javascript">
       !function () {
         var analytics = window.analytics = window.analytics || [];
