--- a/frontend/html/us_batteryoffer.html
+++ b/frontend/html/us_batteryoffer.html
@@ -134,11 +134,11 @@
         </div>
       </div>
     </div>
-    <script
+    <script data-cfasync="false"
       src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4"></script>
 
-    <script type="text/javascript" src="/tacticalsales/assets/js/libs.js"></script>
-    <script type="text/javascript" src="/tacticalsales/assets/js/battery_headlamp_script.js"></script>
+    <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/libs.js"></script>
+    <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/battery_headlamp_script.js"></script>
 
   </body>
 </html>
