--- a/frontend/html/customercare.html
+++ b/frontend/html/customercare.html
@@ -14,10 +14,7 @@
     <meta property="og:title" content="Tactical Mastery Flashlights - Video page">
     <link rel="icon" href="favicon.ico">
 
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/normalize/5.0.0/normalize.css">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/bootstrap/4.0.0-alpha.5/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.6(css/bootstrap.min.css)">
     <link rel="stylesheet" href="/tacticalsales/assets/css/style.css">
     <script type="text/javascript">
       !function () {
