--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -13,9 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tactical Mastery Flashlights - Video page">
     <link rel="icon" href="favicon.ico">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.5(css/bootstrap.min.css)">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.6(css/bootstrap.min.css)">
     <link rel="stylesheet" href="/tacticalsales/assets/css/style.css">
     <script type="text/javascript">
       !function () {
@@ -506,8 +504,7 @@
     </div>
     <!-- Modal -->
     <!-- Loading Icons -->
-    <script data-cfasync="false"
-      src="https://cdn.jsdelivr.net/g/jquery@3.1.1,js-cookie@2.2.0,tether@1.3.7,bootstrap@4.0.0-alpha.5,jquery.mask@1.14.0,mailcheck@1.1,mobile-detect.js@1.3.4,modernizr@3.3.1"></script>
+    <script src="https://cdn.jsdelivr.net/g/jquery@3.2.1,js-cookie@2.2.0,bootstrap@4.0.0-alpha.6,jquery.mask@1.14.10,mailcheck@1.1.2,mobile-detect.js@1.3.5,modernizr@3.3.1"></script>
     <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/libs.js"></script>
     <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/common_validators.js"></script>
     <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/index_script.js"></script>
