--- a/frontend/html/privacy.html
+++ b/frontend/html/privacy.html
@@ -13,9 +13,7 @@
     <meta property="og:type" content="website">
     <meta property="og:title" content="Tactical Mastery Flashlights - Video page">
     <link rel="icon" href="favicon.ico">
-    <link
-      rel="stylesheet"
-      href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.6(css/bootstrap.min.css)">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/g/normalize@5.0.0,bootstrap@4.0.0-alpha.6(css/bootstrap.min.css)">
     <link rel="stylesheet" href="/tacticalsales/assets/css/style.css">
     <script type="text/javascript">
       !function () {
