--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -525,6 +525,6 @@
     </div>
     <!-- Modal -->
     <!-- Modal -->
-    <script type="text/javascript" src="/tacticalsales/assets/js/checkout_script.js"></script>
+    <script type="text/javascript" src="/tacticalsales/assets/js/checkout_script.js" async></script>
   </body>
 </html>
