--- a/frontend/html/receipt.html
+++ b/frontend/html/receipt.html
@@ -116,6 +116,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/tacticalsales/assets/js/upsell_receipt_script.js"></script>
+    <script type="text/javascript" src="/tacticalsales/assets/js/upsell_receipt_script.js" async></script>
   </body>
 </html>
