--- a/frontend/html/us_batteryoffer.html
+++ b/frontend/html/us_batteryoffer.html
@@ -134,6 +134,6 @@
         </div>
       </div>
     </div>
-    <script type="text/javascript" src="/tacticalsales/assets/js/battery_headlamp_script.js"></script>
+    <script type="text/javascript" src="/tacticalsales/assets/js/battery_headlamp_script.js" async></script>
   </body>
 </html>
