Disable CFRL for index_script

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -506,7 +506,7 @@
     </div>
     <!-- Modal -->
     <!-- Loading Icons -->
-    <script type="text/javascript" src="/tacticalsales/assets/js/index_script.js" async></script>
+    <script type="text/javascript" data-cfasync="false" src="/tacticalsales/assets/js/index_script.js" async></script>
     <script type="text/javascript">
       window.wistiaDisableMux = true;
       window._wq = window._ws || [];
