Fix: Contact modal not opening after funnel video

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -514,7 +514,7 @@
         id: "sg6u0amacm",
         onReady: function (video) {
           video.bind('end', function () {
-            openContactModal();
+            $('#modal-contact').modal('show');
           });
         }
       });
