--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -353,7 +353,7 @@
                       autocorrect="off"
                       autocomplete="postal-code"
                       inputmode="numeric"
-                      onkeyup="loadStateFromZip()">
+                      onkeyup="utilsInstance.loadStateFromZip()">
                     <small class="help-block valid-message text-success message-hidden"></small>
                   </div>
                 </div>
