Change: keyup event

--- a/frontend/html/checkout.html
+++ b/frontend/html/checkout.html
@@ -247,8 +247,7 @@
                             pattern="\d*"
                             autocomplete="postal-code"
                             autocorrect="off"
-                            inputmode="numeric"
-                            onkeyup="utilsInstance.loadStateFromZip()">
+                            inputmode="numeric">
                           <small class="help-block validMessage text-success message-hidden"></small>
                         </div>
                       </div>
