--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -352,8 +352,7 @@
                       pattern="\d*"
                       autocorrect="off"
                       autocomplete="postal-code"
-                      inputmode="numeric"
-                      onkeyup="utilsInstance.loadStateFromZip()">
+                      inputmode="numeric">
                     <small class="help-block valid-message text-success message-hidden"></small>
                   </div>
                 </div>
