Replaced wisia-video with wisia-iframe

--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -166,21 +166,29 @@
         </div>
         <!-- Top Menu //-->
 
-        <!-- Wistia Video //-->
+        <!--Wistia Video //-->
         <div class="video-container">
-          <script src="//fast.wistia.com/embed/medias/sg6u0amacm.jsonp" async></script>
-          <script src="//fast.wistia.com/assets/external/E-v1.js" async></script>
           <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;">
-            <div
+            <iframe
+              allowfullscreen
+              allowtransparency="true"
               class="wistia_responsive_wrapper"
-              style="height:100%;left:0;position:absolute;top:0;width:100%;">
-              <div
-                class="wistia_embed wistia_async_sg6u0amacm seo=false videoFoam=true"
-                style="height:100%;width:100%"></div>
-            </div>
+                  style="height:100%;left:0;position:absolute;top:0;width:100%;"
+              frameborder="0"
+              mozallowfullscreen
+              msallowfullscreen
+              name="wistia_embed"
+              oallowfullscreen
+              scrolling="no"
+              src="//fast.wistia.net/embed/iframe/sg6u0amacm?seo=false&videoFoam=true"
+              webkitallowfullscreen
+              width="100%"
+              height="100%"
+              >
+            </iframe>
           </div>
         </div>
-        <!-- Wistia Video //-->
+        <!--Wistia Video //-->
 
         <div class="button-block">
           <div
