--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -180,7 +180,7 @@
               name="wistia_embed"
               oallowfullscreen
               scrolling="no"
-              src="http://fast.wistia.net/embed/iframe/sg6u0amacm?seo=false&videoFoam=true"
+              src="https://fast.wistia.net/embed/iframe/sg6u0amacm?seo=false&videoFoam=true"
               webkitallowfullscreen
               width="100%"
               height="100%"
