--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -167,8 +167,7 @@
         <!-- Top Menu //-->
 
         <!--Wistia Video // please keep how wistia has -->
-        <div class="wistia_responsive_padding" style="padding:56.25% 0 0 0;position:relative;"><div class="wistia_responsive_wrapper" style="height:100%;left:0;position:absolute;top:0;width:100%;"><iframe src="https://fast.wistia.net/embed/iframe/sg6u0amacm?seo=false&videoFoam=true" title="Wistia video player" allowtransparency="true" frameborder="0" scrolling="no" class="wistia_embed" name="wistia_embed" allowfullscreen mozallowfullscreen webkitallowfullscreen oallowfullscreen msallowfullscreen width="100%" height="100%"></iframe></div></div>
-  <script src="https://fast.wistia.net/assets/external/E-v1.js" async></script>
+        <iframe width="560" height="315" src="https://www.youtube.com/embed/vjYjx9xgfqo" frameborder="0" allowfullscreen></iframe>
         <!--Wistia Video //-->
 
         <div class="button-block">
