--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -169,7 +169,9 @@
         <!--Wistia Video // please keep how wistia has -->
         <div style="padding:56.25% 0 0 0;position:relative;">
           <div  style="height:100%;left:0;position:absolute;top:0;width:100%;">
-            <iframe width="100%" height="100%" src="https://www.youtube.com/embed/vjYjx9xgfqo" frameborder="0" allowfullscreen></iframe>
+            <iframe
+              width="100%" height="100%" src="https://www.youtube.com/embed/vjYjx9xgfqo?autoplay=1"
+              frameborder="0" allowfullscreen></iframe>
           </div>
         </div>
         <!--Wistia Video //-->
