--- a/frontend/html/index.html
+++ b/frontend/html/index.html
@@ -167,13 +167,8 @@
         <!-- Top Menu //-->
 
         <!--Wistia Video // please keep how wistia has -->
-        <div style="padding:56.25% 0 0 0;position:relative;">
-          <div  style="height:100%;left:0;position:absolute;top:0;width:100%;">
-            <iframe
-              width="100%" height="100%" src="https://www.youtube.com/embed/vjYjx9xgfqo?autoplay=1"
-              frameborder="0" allowfullscreen></iframe>
-          </div>
-        </div>
+        
+<style>.embed-container { position: relative; padding-bottom: 56.25%; height: 0; overflow: hidden; max-width: 100%; } .embed-container iframe, .embed-container object, .embed-container embed { position: absolute; top: 0; left: 0; width: 100%; height: 100%; }</style><div class='embed-container'><iframe src='https://www.youtube.com/embed/vjYjx9xgfqo' frameborder='0' allowfullscreen></iframe></div>
         <!--Wistia Video //-->
 
         <div class="button-block">
